--- a/configs/ipq60xx-6.12-wifi.config
+++ b/configs/ipq60xx-6.12-wifi.config
@@ -10,24 +10,12 @@ CONFIG_ATH11K_MEM_PROFILE_512M=y
 CONFIG_IPQ_MEM_PROFILE_512=y
 CONFIG_KERNEL_IPQ_MEM_PROFILE=512
 
-# NSS Offloading
+# NSS Offloading (仅保留核心加速)
 CONFIG_NSS_FIRMWARE_VERSION_12_2=y
 # CONFIG_NSS_FIRMWARE_VERSION_12_5 is not set
-CONFIG_NSS_DRV_IGS_ENABLE=y
-CONFIG_NSS_DRV_L2TP_ENABLE=y
-CONFIG_NSS_DRV_LAG_ENABLE=y
-CONFIG_NSS_DRV_MAPT_ENABLE=y
-CONFIG_NSS_DRV_PPTP_ENABLE=y
-CONFIG_NSS_DRV_PVXLAN_ENABLE=y
 CONFIG_NSS_DRV_SHAPER_ENABLE=y
-CONFIG_NSS_DRV_VXLAN_ENABLE=y
 CONFIG_PACKAGE_kmod-qca-mcs=y
-CONFIG_PACKAGE_kmod-qca-nss-drv-igs=y
-CONFIG_PACKAGE_kmod-qca-nss-drv-l2tpv2=y
-CONFIG_PACKAGE_kmod-qca-nss-drv-lag-mgr=y
-CONFIG_PACKAGE_kmod-qca-nss-drv-map-t=y
 CONFIG_PACKAGE_kmod-qca-nss-drv-pppoe=y
-CONFIG_PACKAGE_kmod-qca-nss-drv-pptp=y
 CONFIG_PACKAGE_kmod-qca-nss-drv-qdisc=y
 CONFIG_PACKAGE_kmod-qca-nss-macsec=y
 
@@ -40,12 +28,6 @@ CONFIG_KERNEL_ZRAM_DEF_COMP_LZORLE=y
 # Busybox
 CONFIG_BUSYBOX_CUSTOM=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_IPV6 is not set
-CONFIG_BUSYBOX_CONFIG_LSUSB=y
-
-# Coremark
-CONFIG_COREMARK_ENABLE_MULTITHREADING=y
-CONFIG_COREMARK_NUMBER_OF_THREADS=16
-CONFIG_COREMARK_OPTIMIZE_O3=y
 
 # LuCI
 CONFIG_LUCI_LANG_zh_Hans=y
@@ -75,16 +57,6 @@ CONFIG_PACKAGE_luci-theme-bootstrap=y
 # OpenClash
 CONFIG_PACKAGE_luci-app-openclash=y
 
-# AdGuardHome
-CONFIG_PACKAGE_luci-app-adguardhome=y
-
-# SmartDNS
-CONFIG_PACKAGE_luci-app-smartdns=y
-CONFIG_PACKAGE_smartdns=y
-
-# MosDNS
-CONFIG_PACKAGE_luci-app-mosdns=y
-
 # iStore
 CONFIG_PACKAGE_luci-app-store=y
 
@@ -101,18 +73,18 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
-CONFIG_PACKAGE_luci-app-zerotier=y
-CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
 CONFIG_PACKAGE_luci-app-package-manager=y
 CONFIG_PACKAGE_luci-i18n-package-manager-zh-cn=y
-CONFIG_PACKAGE_luci-app-netspeedtest=y
+
+# Wireless Relay (Client + AP bridge)
+CONFIG_PACKAGE_relayd=y
+CONFIG_PACKAGE_luci-proto-relay=y
 
 # Network
 CONFIG_PACKAGE_ddns-scripts=y
 CONFIG_PACKAGE_ddns-scripts-services=y
 CONFIG_PACKAGE_miniupnpd-nftables=y
 CONFIG_PACKAGE_sqm-scripts=y
-CONFIG_PACKAGE_zerotier=y
 CONFIG_PACKAGE_iptables-nft=y
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
@@ -128,31 +100,7 @@ CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-tproxy=y
 CONFIG_PACKAGE_xtables-nft=y
-
-# Tunnel & VPN
-CONFIG_PACKAGE_kmod-wireguard=y
 CONFIG_PACKAGE_kmod-tun=y
-CONFIG_PACKAGE_kmod-gre6=y
-CONFIG_PACKAGE_kmod-ip6-tunnel=y
-CONFIG_PACKAGE_kmod-iptunnel4=y
-CONFIG_PACKAGE_kmod-iptunnel6=y
-CONFIG_PACKAGE_kmod-sit=y
-CONFIG_PACKAGE_kmod-bonding=y
-CONFIG_PACKAGE_kmod-vxlan=y
-CONFIG_PACKAGE_kmod-nat46=y
-CONFIG_PACKAGE_kmod-ifb=y
-CONFIG_PACKAGE_kmod-inet-diag=y
-CONFIG_PACKAGE_kmod-netlink-diag=y
-CONFIG_PACKAGE_6rd=y
-
-# Filesystem (no USB - ZN M2 has no USB port)
-CONFIG_PACKAGE_kmod-fs-f2fs=y
-CONFIG_PACKAGE_kmod-fs-ntfs3=y
-CONFIG_PACKAGE_kmod-fs-vfat=y
-CONFIG_PACKAGE_kmod-fs-exportfs=y
-CONFIG_PACKAGE_kmod-nls-cp437=y
-CONFIG_PACKAGE_kmod-nls-iso8859-1=y
-CONFIG_PACKAGE_kmod-nls-utf8=y
 
 # Crypto
 CONFIG_PACKAGE_kmod-crypto-acompress=y
@@ -163,13 +111,10 @@ CONFIG_PACKAGE_kmod-crypto-lib-curve25519=y
 CONFIG_PACKAGE_kmod-crypto-lib-poly1305=y
 
 # System Tools
-CONFIG_PACKAGE_coremark=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
 CONFIG_PACKAGE_etherwake=y
 CONFIG_PACKAGE_ip-tiny=y
-CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_libiperf3=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_tc-tiny=y
 CONFIG_PACKAGE_kmod-sched-cake=y
