--- a/configs/ipq60xx-6.12-wifi.config
+++ b/configs/ipq60xx-6.12-wifi.config
@@ -10,14 +10,9 @@ CONFIG_ATH11K_MEM_PROFILE_512M=y
 CONFIG_IPQ_MEM_PROFILE_512=y
 CONFIG_KERNEL_IPQ_MEM_PROFILE=512
 
-# NSS Offloading (仅保留核心加速)
+# NSS Offloading (核心转发加速)
 CONFIG_NSS_FIRMWARE_VERSION_12_2=y
 # CONFIG_NSS_FIRMWARE_VERSION_12_5 is not set
-CONFIG_NSS_DRV_SHAPER_ENABLE=y
-CONFIG_PACKAGE_kmod-qca-mcs=y
-CONFIG_PACKAGE_kmod-qca-nss-drv-pppoe=y
-CONFIG_PACKAGE_kmod-qca-nss-drv-qdisc=y
-CONFIG_PACKAGE_kmod-qca-nss-macsec=y
 
 # Kernel
 CONFIG_KERNEL_ARM_PMU=y
@@ -63,16 +58,10 @@ CONFIG_PACKAGE_luci-app-store=y
 # LuCI Apps
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
-CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
-CONFIG_PACKAGE_luci-app-sqm=y
-CONFIG_PACKAGE_luci-i18n-sqm-zh-cn=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-CONFIG_PACKAGE_luci-app-wol=y
-CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
 CONFIG_PACKAGE_luci-app-package-manager=y
 CONFIG_PACKAGE_luci-i18n-package-manager-zh-cn=y
 
@@ -81,10 +70,7 @@ CONFIG_PACKAGE_relayd=y
 CONFIG_PACKAGE_luci-proto-relay=y
 
 # Network
-CONFIG_PACKAGE_ddns-scripts=y
-CONFIG_PACKAGE_ddns-scripts-services=y
 CONFIG_PACKAGE_miniupnpd-nftables=y
-CONFIG_PACKAGE_sqm-scripts=y
 CONFIG_PACKAGE_iptables-nft=y
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
@@ -113,12 +99,8 @@ CONFIG_PACKAGE_kmod-crypto-lib-poly1305=y
 # System Tools
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
-CONFIG_PACKAGE_etherwake=y
 CONFIG_PACKAGE_ip-tiny=y
 CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_tc-tiny=y
-CONFIG_PACKAGE_kmod-sched-cake=y
-CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_zram-swap=y
 CONFIG_PACKAGE_cgi-io=y
